# soroban-ret

./: .gitignore  .gitmodules  Cargo.toml  README.md  accuracy-baseline.json  codecov.yml
.github/workflows/: benchmark.yml  build.yml  coverage.yml  publish.yml
benchmark-data/: baseline.json
benchmark-data/mainnet/: README.md  manifest.json
crates/soroban-ret/: Cargo.toml
crates/soroban-ret-accuracy/: Cargo.toml
crates/soroban-ret-accuracy/src/: ast_compare.rs  ir_assertions.rs  lib.rs  metrics.rs  report.rs  spec_compare.rs  test_harness.rs
crates/soroban-ret-accuracy/tests/: harness.rs  ir_assertions.rs  spec_consistency.rs
crates/soroban-ret-bench/: Cargo.toml
crates/soroban-ret-bench/src/: diff.rs  lib.rs  main.rs  markdown.rs  metrics.rs  report_html.rs
crates/soroban-ret-bench/tests/: diff.rs  metrics.rs  plausibility.rs
crates/soroban-ret-cli/: Cargo.toml
crates/soroban-ret-cli/src/: main.rs
crates/soroban-ret-cli/tests/: cli.rs
crates/soroban-ret-equiv/: Cargo.toml
crates/soroban-ret-equiv/src/: lib.rs
crates/soroban-ret-equiv/tests/: equivalence.rs
crates/soroban-ret/examples/: dumpwat.rs
crates/soroban-ret/src/: dynamic_hints.rs  lib.rs  pipeline.rs
crates/soroban-ret/src/codegen/: functions.rs  imports.rs  mod.rs  module.rs  types.rs
crates/soroban-ret/src/ir/: correctness.rs  high_level_ir.rs  mod.rs  optimizer.rs  soroban_ir.rs
crates/soroban-ret/src/pattern/: cfg_analysis.rs  dispatch.rs  host_calls.rs  lifter.rs  mod.rs  structurize.rs
crates/soroban-ret/src/spec/: mod.rs  registry.rs  standard_interfaces.rs  type_info.rs
crates/soroban-ret/src/wasm/: data.rs  exports.rs  imports.rs  ir.rs  mod.rs  parser.rs  validate.rs
crates/soroban-ret/tests/: _debug_ir.rs  compile_back.rs  corpus_soundness.rs  integration.rs  smoke.rs
crates/soroban-ret/tests/snapshots/: integration__contract_with_constructor.snap  integration__test_errors.snap  integration__test_errors.snap.new  integration__test_events.snap
docs/: pattern-coverage.md
scripts/: check-compilable.sh  check-corpus-soundness.sh  fetch_benchmark_wasm.py  publish.sh  rebuild-benchmark-baseline.sh  rebuild-fixtures.sh
tests/fixtures/: README.md  test_account.wasm  test_add_i128.wasm  test_add_u128.wasm  test_add_u64.wasm  test_alloc.wasm  test_associated_types.wasm  test_associated_types_contracttrait.wasm  test_auth.wasm  test_bls.wasm  test_bn254.wasm  test_constructor.wasm  test_contract_data.wasm  test_contracttrait_impl_full.wasm  test_contracttrait_impl_partial.wasm  test_contracttrait_path_crate.wasm  test_contracttrait_path_relative.wasm  test_contracttrait_path_self.wasm  test_contracttrait_path_super.wasm  test_empty.wasm  test_errors.wasm  test_events.wasm  test_events_ref.wasm  test_fuzz.wasm  test_generics.wasm  test_import_contract.wasm  test_invoke_contract.wasm  test_liquidity_pool.wasm  test_logging.wasm  test_macros.wasm  test_modular.wasm  test_multiimpl.wasm  test_mutability.wasm  test_sub_u64.wasm  test_tuples.wasm  test_udt.wasm  test_workspace_contract.wasm  test_zero.wasm
tests/fixtures-src/sub_u64/: Cargo.toml
tests/fixtures-src/sub_u64/src/: lib.rs
