[workspace]
resolver = "2"
members = [
    "crates/soroban-ret",
    "crates/soroban-ret-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95.0"
repository = "https://github.com/Inferara/soroban-ret"
homepage = "https://github.com/Inferara/soroban-ret"
readme = "README.md"
license = "Apache-2.0"
keywords = ["soroban", "stellar", "decompiler", "wasm", "smart-contract"]
categories = ["development-tools", "command-line-utilities", "wasm"]

[workspace.dependencies]
soroban-ret = { version = "0.0.1", path = "crates/soroban-ret" }
soroban-spec = "26.0.0-rc.1"
soroban-meta = "26.0.0-rc.1"
stellar-xdr = { version = "26.0.0", default-features = false, features = ["curr", "std", "base64"] }
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }
wasmparser = "0.248.0"
wasmprinter = "0.248.0"
