[workspace]
resolver = "2"
members = [
    "crates/soroban-ret",
    "crates/soroban-ret-accuracy",
    "crates/soroban-ret-bench",
    "crates/soroban-ret-cli",
    "crates/soroban-ret-equiv",
]

[workspace.package]
version = "0.0.3"
edition = "2024"
rust-version = "1.95.0"
repository = "https://github.com/Inferara/soroban-ret"
homepage = "https://github.com/Inferara/soroban-ret"
readme = "README.md"
license = "Apache-2.0"
keywords = ["soroban", "stellar", "decompiler", "wasm", "smart-contract"]
categories = ["development-tools", "command-line-utilities", "wasm"]

[workspace.dependencies]
soroban-ret = { version = "0.0.3", path = "crates/soroban-ret" }
soroban-spec = "26.0.0-rc.1"
soroban-meta = "26.0.0-rc.1"
soroban-spec-rust = "26.0.0-rc.1"
stellar-xdr = { version = "26.0.1", default-features = false, features = ["curr", "std", "base64"] }
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }
wasmparser = "0.250.0"
wasmprinter = "0.250.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
prettyplease = "0.2"
log = "0.4.30"
env_logger = "0.11"
cov-mark = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
