[package]
name = "soroban-ret-accuracy"
description = "Accuracy measurement framework for the soroban-ret"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
publish = false

[[bin]]
name = "accuracy"
path = "src/bin/accuracy.rs"

[dependencies]
soroban-ret = { workspace = true }
stellar-xdr = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
