[package]
name = "soroban-ret"
description = "Stellar Soroban Smart Contracts Reverse Engineering Tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
soroban-spec = { workspace = true }
soroban-meta = { workspace = true }
soroban-spec-rust = { workspace = true }
stellar-xdr = { workspace = true }
wasmparser = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
cov-mark = { workspace = true }
wasmprinter = { workspace = true, optional = true }

[dev-dependencies]
insta = "1.40"
wat = "1"
