# Source for the `tests/fixtures/test_sub_u64.wasm` fixture. Mirrors the upstream
# `rs-soroban-sdk` `add_u64` test crate but exercises `checked_sub` (underflow)
# so the functional-equivalence harness covers the `checked_sub().ok_or(..)`
# recovery. Built once and the resulting wasm is committed under tests/fixtures/;
# see tests/fixtures/README.md. Standalone (`[workspace]`) so it is not pulled
# into the main cargo workspace.
[package]
name = "test_sub_u64"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "=26.0.1"

# Match the canonical Soroban release profile (overflow-checks on), as the
# equivalence harness recompiles with the same setting.
[profile.release]
overflow-checks = true

[workspace]
